Fix foregound vs background data use measurement

The application state when the request was created should be used to
record foreground vs background data use. Currently, application state at
the time of data use is used.

BUG=648808

Review-Url: https://codereview.chromium.org/2358663004
Cr-Commit-Position: refs/heads/master@{#421126}

Former-commit-id: da6c2ca5df87b5f74c615c45f8b5b6faf82cb158