components/data_use_measurement/core/data_use_user_data.h
@@ -43,7 +43,11 @@ class DataUseUserData : public base::SupportsUserData::Data {
     SAFE_BROWSING,
   };
 
-  explicit DataUseUserData(ServiceName service_name);
+  // The state of the application. Only available on Android and on other
+  // platforms it is always FOREGROUND.
+  enum AppState { UNKNOWN, BACKGROUND, FOREGROUND };
+
+  DataUseUserData(ServiceName service_name, AppState app_state);
   ~DataUseUserData() override;
 
   // Helper function to create DataUseUserData. The caller takes the ownership
@@ -61,11 +65,16 @@ class DataUseUserData : public base::SupportsUserData::Data {
 
   ServiceName service_name() const { return service_name_; }
 
+  AppState app_state() const { return app_state_; }
+
   // The key for retrieving back this type of user data.
   static const void* const kUserDataKey;
 
  private:
   const ServiceName service_name_;
+
+  // App state when the request started.
+  const AppState app_state_;
 
   DISALLOW_COPY_AND_ASSIGN(DataUseUserData);
 };
